--- a/src/main/webapp/app/entities/product/product.componentbkp add role.html
+++ b/src/main/webapp/app/entities/product/product.componentbkp add role.html
@@ -13,46 +13,29 @@
     <jhi-alert></jhi-alert>
     <br/>
     <div *ngIf="products">
-        <div class="mb-2 d-flex justify-content-end align-items-center">
-            <span class="mr-2 col-2">Filter by name</span>
-            <input type="search" class="form-control" [(ngModel)]="filter">
-            <span class="mx-2 col-1">Sort by</span>
-            <div class="btn-group" role="group"
-                jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-                <button type="button" class="btn btn-light" jhiSortBy="name"><span> Name</span> <fa-icon [icon]="'sort'"></fa-icon>
-                </button>
-                <button type="button" class="btn btn-light" jhiSortBy="Price"><span jhiTranslate="storeApp.product.price">   Price</span> <fa-icon [icon]="'sort'"></fa-icon>
-                </button>
-                <button type="button" class="btn btn-light" jhiSortBy="size"><span jhiTranslate="storeApp.product.size" > Size</span> <fa-icon [icon]="'sort'"></fa-icon>
-                </button>
-                <button type="button" class="btn btn-light" jhiSortBy="productCategory.id"><span jhiTranslate="storeApp.product.productCategory" > Product Category</span> <fa-icon [icon]="'sort'"></fa-icon>
-                </button>
-            </div>
-            </div>
-        </div>
             <div class="list-group">
-         <a
+         <a [routerLink]="['/product', product.id, 'view']"
                 class="list-group-item   list-group-item-action  flex-column
                 align-items-start"
-                *ngFor="let product of (products) | pureFilter: filter:'name'; trackBy: trackId">
+                *ngFor="let product of products; trackBy: trackId">
                 <div class="row">
-                    <div [routerLink]="['/product', product.id, 'view']"  class="col-2 col-xs-12 justify-content-center">
-                        <img  [src]="'data:' + product.imageContentType +
+                    <div class="col-2 col-xs-12 justify-content-center">
+                        <img [src]="'data:' + product.imageContentType +
                         ';base64,' + product.image"
                         style="max-height: 150px;" alt="product image" />
                     </div>
                     <div class="col col-xs-12">
                             <div class="d-flex w-100 justify-content-between">
                                     <h5  class="mb-1">{{product.name}}</h5>
-                                    <small *ngIf="product?.productCategory">
+                                    <small *ngIf="product.productCategory">
                                        <strong> Category: </strong>
-                                        <a [routerLink]="['../product-category', product.productCategory?.id, 'view']">
+                                        <a [routerLink]="['/product-category', product.productCategory?.id, 'view']">
                                             {{product.productCategory?.name}}
                                         </a>
                                     </small>
                                 </div>
                                 <small class="mb-1">{{product.description}}</small>
-                                <p  class="mb-1">Price: {{product.price}}</p>
+                                <p  class="mb-1">Price: {{product.price | currency: 'USD'}}</p>
                                 <small>
                                     Size:
                                     <span jhiTranslate="{{'storeApp.Size.' +
@@ -61,26 +44,26 @@
                                     </span>
                                 </small>
                                 <div *jhiHasAnyAuthority="'ROLE_ADMIN'">
-
+                                        <div class="btn-group flex-btn-group-container">
                                                 <button type="submit"
-                                                [routerLink]="['/product', product.id, 'edit']"
-                                                            class="btn btn-primary btn-sm">
-                                                            <span class="fa fa-pensil"></span>
-                                                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                                                        [routerLink]="['/product', product.id, 'edit']"
+                                                        class="btn btn-primary btn-sm">
+                                                    <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                                                 </button>
                                                 <button type="submit"
                                                         [routerLink]="['/', { outlets: { popup: 'product/'+ product.id + '/delete'} }]"
                                                         replaceUrl="true"
                                                         queryParamsHandling="merge"
                                                         class="btn btn-danger btn-sm">
-                                                        <span class="fa fa-remove"></span>
-                                                    <span class="d-none d-md-inline"
-                                                          jhiTranslate="entity.action.delete">Delete</span>
+                                                    <fa-icon [icon]="'times'"></fa-icon>
+                                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                                                 </button>
                                          </div>
                                  </div>
                              </div>
-                        </a>
+                </div>
+            </a>
         </div>
     </div>
 
